--- a/.github/workflows/DocDirect-ci-cd.yml
+++ b/.github/workflows/DocDirect-ci-cd.yml
@@ -17,6 +17,11 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Install docker-compose
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y docker-compose
+
       - name: Log in to Docker Hub
         if: env.DOCKER_HUB_USERNAME != ''
         uses: docker/login-action@v3
@@ -34,33 +39,34 @@ jobs:
           docker-compose push
 
 
-      #  DEPLOYMENT OPTIONS —
+      # -----------------------------
+      # DEPLOYMENT OPTIONS
+      # -----------------------------
 
-      #  Railway.app
+      # ---- RAILWAY ----
       - name: Trigger Railway Deploy (optional)
         if: github.ref == 'refs/heads/main' && env.RAILWAY_TOKEN != ''
         run: |
           echo "Triggering Railway deployment..."
           npx railway up --service docdirect --detach
 
-#      #  Render.com
-#      - name: Trigger Render Deploy (optional)
-#        if: github.ref == 'refs/heads/main' && env.RENDER_DEPLOY_HOOK_URL != ''
-#        run: |
-#          echo "Triggering Render deployment..."
-#          curl -X POST ${{ secrets.RENDER_DEPLOY_HOOK_URL }}
-#
-#
-#      #  AWS EC2 via SSH
-#      - name: Deploy to AWS EC2 (optional)
-#        if: github.ref == 'refs/heads/main' && env.EC2_HOST != ''
-#        uses: appleboy/ssh-action@v1.2.0
-#        with:
-#          host: ${{ secrets.EC2_HOST }}
-#          username: ubuntu
-#          key: ${{ secrets.EC2_SSH_KEY }}
-#          script: |
-#            cd /home/ubuntu/DocDirect-Backend
-#            git pull origin main
-#            sudo docker-compose pull
-#            sudo docker-compose up -d --build
+      # ---- RENDER ----
+      # - name: Trigger Render Deploy (optional)
+      #   if: github.ref == 'refs/heads/main' && env.RENDER_DEPLOY_HOOK_URL != ''
+      #   run: |
+      #     echo "Triggering Render deployment..."
+      #     curl -X POST ${{ secrets.RENDER_DEPLOY_HOOK_URL }}
+
+      # ---- AWS EC2 ----
+      # - name: Deploy to AWS EC2 (optional)
+      #   if: github.ref == 'refs/heads/main' && env.EC2_HOST != ''
+      #   uses: appleboy/ssh-action@v1.2.0
+      #   with:
+      #     host: ${{ secrets.EC2_HOST }}
+      #     username: ubuntu
+      #     key: ${{ secrets.EC2_SSH_KEY }}
+      #     script: |
+      #       cd /home/ubuntu/DocDirect-Backend
+      #       git pull origin main
+      #       sudo docker-compose pull
+      #       sudo docker-compose up -d --build
