--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,7 +58,7 @@ services:
       SPRING_DATASOURCE_PASSWORD: password123
       SPRING_JPA_HIBERNATE_DDL_AUTO: update
       SPRING_SQL_INIT_MODE: always
-      SPRINGDOC_SWAGGER-UI_ENABLED: true
+      SPRINGDOC_SWAGGER-UI_ENABLED: "true"
       SPRING_KAFKA_BOOTSTRAP_SERVERS: docdirect-kafka:9092
       billing.service.address: docdirect-billing-service
       billing.service.grpc.port: 50051
@@ -113,7 +113,7 @@ services:
     container_name: DocDirect-Auth-Service
     environment:
       SPRING_DATASOURCE_URL: jdbc:postgresql://docdirect-auth-db:5432/db
-      SPRINGDOC_SWAGGER-UI_ENABLED: true
+      SPRINGDOC_SWAGGER-UI_ENABLED: "true"
       SPRING_DATASOURCE_USERNAME: admin
       SPRING_DATASOURCE_PASSWORD: password123
       SPRING_JPA_HIBERNATE_DDL_AUTO: update
